--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -8,9 +8,10 @@
 <body>
 
 <div class="container">
-  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top" th:fragment = "footer" style="color: dodgerblue">
+  <footer class="mt-auto text-white-50" th:fragment = "footer" style="color: dodgerblue">
     </br></br>
-    <p class="col-md-4 mb-0 text-body-secondary">© 2023 addore, Inc</p>
+    <p class="col-md-4 mb-0 text-body-secondary">info@company.by</p>
+    <p class="col-md-4 mb-0 text-body-secondary">© 2023</p>
   </footer>
 </div>
 </body>
