--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,7 +13,7 @@
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </head>
 
-<body class="text-center">
+<body class="text-center" style="background-color: dimgray; color: white" >
 
 <div class = "container border d-flex justify-content-center" style="width: 25%; height: 25%; margin-top: 60px">
 
@@ -23,14 +23,17 @@
         </div>
         <h1 class="h3 mb-3 fw-normal">Войдите в аккаунт</h1>
         <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}" />
+        <br>
         <div class="form-floating">
             <input type="text" class="form-control" id="floatingInput" placeholder="Email" name="username">
             <label for="floatingInput">Логин</label>
         </div>
+        <br>
         <div class="form-floating">
             <input type="password" class="form-control" id="floatingPassword" placeholder="Password" name="password">
             <label for="floatingPassword">Пароль</label>
         </div>
+        <br>
         <button class="w-100 btn btn-lg btn-primary" type="submit">Войти</button>
         <div class="text-center">
             <a th:href="@{/registration}">Регистрация</a>
