--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -8,10 +8,12 @@
 <body>
 
 <div class="container">
-  <footer class="mt-auto text-white-50" th:fragment = "footer" style="color: dodgerblue">
-    </br></br>
-    <p class="col-md-4 mb-0 text-body-secondary">info@company.by</p>
-    <p class="col-md-4 mb-0 text-body-secondary">© 2023</p>
+  <footer th:fragment="footer" class="d-flex align-items-center">
+      <div class="col">
+      <br>
+      <p class="text-body-secondary" style="color: white">info@company.by</p>
+      <p class="text-body-secondary" style="color: white">© 2023</p>
+    </div>
   </footer>
 </div>
 </body>
