--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -3,33 +3,33 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
 </head>
 <body>
-<header class="header" th:fragment = "header" xmlns:sec="http://www.w3.org/1999/xhtml">
+<header class="header" style="background-color: #ffc24b; color: black" th:fragment = "header" xmlns:sec="http://www.w3.org/1999/xhtml">
 
-<nav class="nav" aria-label="Secondary navigation">
+<nav class="nav" aria-label="Secondary navigation" style="background-color: #ffc24b; color: black">
   <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
-    <img src="/static/images/logo.png" alt="Logo" height="40" width="100">
+    <img src="/static/images/logo.png" alt="Logo" height="40" width="40">
   </a>
   <li th:if="${#authorization.expression('hasRole(''ROLE_SPECIALIST'')')}">
-  <a class="nav-link" th:href="@{/briefsSpec}">
-    Брифы
+  <a class="nav-link">
+    Чистки
 <!--    <span class="badge text-bg-light rounded-pill align-text-bottom">2</span>-->
   </a>
   </li>
-  <li th:if="${#authorization.expression('hasRole(''ROLE_CLIENT'')')}">
-    <a class="nav-link" th:href="@{/briefsCl}">
-      Брифы
+  <li th:if="${#authorization.expression('hasRole(''ROLE_BOSS'')')}">
+    <a class="nav-link">
+      Вопросы
     </a>
   </li>
   <li th:if="${#authorization.expression('hasRole(''ROLE_SPECIALIST'')')}">
-    <a class="nav-link" th:href="@{/projectsSpec}">Проекты</a>
+    <a class="nav-link">Проекты</a>
   </li>
-  <li th:if="${#authorization.expression('hasRole(''ROLE_CLIENT'')')}">
-    <a class="nav-link" th:href="@{/projectsCl}">Проекты</a>
+  <li th:if="${#authorization.expression('hasRole(''ROLE_BOSS'')')}">
+    <a class="nav-link" >Сотрудники</a>
   </li>
-  <a class="nav-link" th:href="@{/acc}">Аккаунт</a>
+  <a class="nav-link">Аккаунт</a>
   <div sec:authorize="isAuthenticated()">
     <form th:action="@{/logout}" method="post">
-      <button type="submit" class="btn btn-outline-primary me-2">Выход</button>
+      <button type="submit" class="btn btn-outline-primary me-2" style="background-color: #ffc24b; color: black; border-color: #ffc24b">Выход</button>
     </form>
   </div>
 </nav>
