--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="ru" xmlns:th="http://thymeleaf.org">
 <head>
-    <title>addore</title>
+    <title>home</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <!-- Bootstrap CSS (jsDelivr CDN) -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -15,11 +15,7 @@
 <header th:insert ="~{fragments/header :: header}"></header>
 </br></br></br>
 <div class="col-12" align="center">
-    <iframe width="50%" height="550" src="https://www.youtube.com/embed/b99kQteQF6Y"
-
-            title="YouTube video player" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen></iframe>
+    <iframe width="50%" height="550" src="https://www.youtube.com/embed/7vh9dLaUZaM?si=aJQbNhONfbt1AlBJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div>
 <div th:replace="fragments/footer :: footer"></div>
 </body>
