--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -1,51 +1,3 @@
-<!--<!DOCTYPE html>-->
-<!--<html>-->
-<!--<head>-->
-<!--    <title>Registration</title>-->
-<!--    &lt;!&ndash; Кодировка веб-страницы &ndash;&gt;-->
-<!--    <meta charset="utf-8">-->
-<!--    &lt;!&ndash; Настройка viewport &ndash;&gt;-->
-<!--    <meta name="viewport" content="width=device-width, initial-scale=1">-->
-<!--    <title>...</title>-->
-<!--    &lt;!&ndash; Bootstrap CSS (jsDelivr CDN) &ndash;&gt;-->
-<!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">-->
-<!--    &lt;!&ndash; Bootstrap Bundle JS (jsDelivr CDN) &ndash;&gt;-->
-<!--    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>-->
-<!--</head>-->
-<!--<body>-->
-<!--<div class="container col-xl-10 col-xxl-8 px-4 py-5">-->
-<!--    <div class="row align-items-center g-lg-5 py-5">-->
-<!--        <div class="col-lg-7 text-center text-lg-start">-->
-<!--            <h1 class="display-5 fw-bold lh-1 text-body-emphasis mb-3">Присоединяйтесь к нашей образовательной платформе через простую регистрацию!</h1>-->
-<!--            <p class="col-lg-10 fs-4">Below is an example form built entirely with Bootstrap’s form controls. Each required form group has a validation state that can be triggered by attempting to submit the form without completing it.</p>-->
-<!--        </div>-->
-<!--        <div class="col-md-10 mx-auto col-lg-5">-->
-<!--            <form class="p-4 p-md-5 border rounded-3 bg-body-tertiary" th:action="@{/registration/reg_new_user}" method="post" >-->
-<!--                <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}" />-->
-<!--                <div class="form-floating mb-3">-->
-<!--                    <input type="text" class="form-control" id="floatingInput" placeholder="login" name="login" required>-->
-<!--                    <label for="floatingInput">login</label>-->
-<!--                </div>-->
-<!--                <div th:if="${errorMessage}" class="text-danger" style="font-size: smaller;">-->
-<!--                    <p th:text="${errorMessage}"></p>-->
-<!--                </div>-->
-<!--                <div class="form-floating mb-3">-->
-<!--                    <input type="password" class="form-control" id="floatingPassword" placeholder="password" name="password" required-->
-<!--                    minlength="8" maxlength="16">-->
-<!--                    <label for="floatingPassword">password</label>-->
-<!--                </div>-->
-<!--                <button class="w-100 btn btn-lg btn-primary" type="submit">Зарегистрироваться</button>-->
-<!--                <hr class="my-4">-->
-<!--            </form>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
-
-<!--</body>-->
-<!--</html>-->
-
-
-
 <!doctype html>
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
@@ -59,61 +11,68 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Bootstrap Bundle JS (jsDelivr CDN) -->
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script>
+        function previewImage(event) {
+            var input = event.target;
+            var reader = new FileReader();
+
+            reader.onload = function() {
+                var previewImage = document.getElementById('accImage');
+                previewImage.src = reader.result;
+            };
+
+            reader.readAsDataURL(input.files[0]);
+        }
+    </script>
 </head>
 
-<body class="text-center">
+<body class="text-center" style = "background-color: dimgray; border-color: white; color: black">
 
-<div class = "container border d-flex justify-content-center" style="width: 25%; height: 25%; margin-top: 60px">
+<div class = "container border d-flex justify-content-center" style="width: 25%; height: 25%; margin-top: 60px; background-color: white; border-color: black; border-radius: 15px; color: black">
 
-    <form th:action="@{/registration/reg_new_user}" method="post">
+    <form th:action="@{/registration/reg_new_user}" method="post" style="text-align: center">
         <div>
-            <img src="/static/images/logo.png" alt="Logo" height="80" width="200">
+            <br>
+            <img src="/static/images/logo.png" alt="Logo" width="70" height="70">
         </div>
         <h1 class="h3 mb-3 fw-normal">Регистрация</h1>
         <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}" />
-        <div class="col-md-3">
-            <img src="/static/images/acc.png" alt="Logo" height="256" width="256">
+        <div style="text-align: center; width: 100px; height: 100px; border-radius: 50%; border: 5px solid dimgrey; overflow: hidden; display: flex; justify-content: center; align-items: center;">
+            <img src="/static/images/acc.png" style="object-fit: cover;" id="accImage" alt="Photo" height="100%" width="100%">
         </div>
+        <br>
+<!--        <div style="text-align: left; color: #ffc24b"><label >Загрузите фото для аккаунта:</label></div>-->
         <div class="form-floating">
-            <input type="file" name="image" id="image" multiple required>
+            <input type="file" style = "border-color: black" name="image" id="image" accept="image/*" onchange="previewImage(event)">
             <br/><br/>
         </div>
-        <div class="form-floating mb-3">
-            <input type="text" class="form-control" id="name" placeholder="name" name="name" required>
+        <div class="form-floating mb-3" style="color: black">
+            <input type="text" class="form-control" id="name" placeholder="name" name="name" required minlength="2" maxlength="16" pattern="^[А-Яа-яЁё]+$">
             <label for="floatingInput">Имя</label>
         </div>
-        <div class="form-floating mb-3">
+        <div class="form-floating mb-3" style="color: black">
             <input type="text" class="form-control" id="surname" placeholder="surname" name="surname" required minlength="2" maxlength="16" pattern="^[А-Яа-яЁё]+$">
             <label for="floatingInput">Фамилия</label>
         </div>
-        <div class="form-floating mb-3">
-            <input type="text" class="form-control" id="floatingInput" placeholder="login" name="login" required minlength="8" maxlength="16" pattern="^[А-Яа-яЁё]+$">
+        <div class="form-floating mb-3" style="color: black">
+            <input type="text" class="form-control" id="floatingInput" placeholder="login" name="login" required minlength="8" maxlength="16">
             <label for="floatingInput">Логин</label>
         </div>
         <div th:if="${errorMessage}" class="text-danger" style="font-size: smaller;">
             <p th:text="${errorMessage}"></p>
         </div>
-        <div class="form-floating mb-3">
+        <div class="form-floating mb-3" style="color: black">
             <input type="password" class="form-control" id="floatingPassword" placeholder="password" name="password" required
                    minlength="8" maxlength="16">
             <label for="floatingPassword">Пароль</label>
         </div>
-        <div class="form-check form-check-inline mb-3">
-            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" checked
-                   value="ROLE_BOSS" ${user.roles?seq_contains(role)?string("checked","")}>
-            <label class="form-check-label" for="flexRadioDefault1">
-                Руководитель
-            </label>
+        <input type="hidden" name="role" value="ROLE_BOSS">
+        <button class="w-100 btn btn-lg btn-primary" style="background-color: #ffc24b; border-color: white; color: black" type="submit">Регистрация</button>
+        <br>
+        <div class="text-center">
+            <a th:href="@{/login}" style="color: #ffc24b">Вход</a>
         </div>
-        <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2"
-                   value="ROLE_SPECIALYST" ${user.roles?seq_contains(role)?string("checked","")}>
-            <label class="form-check-label" for="flexRadioDefault2">
-                Специалист
-            </label>
-        </div>
-        <button class="w-100 btn btn-lg btn-primary" type="submit">Регистрация</button>
-        <p class="mt-5 mb-3 text-body-secondary">©2023</p>
+        <br>
     </form>
 </div>
 <div th:replace="fragments/footer :: footer"></div>
