--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,39 +1,89 @@
+<!--<!DOCTYPE HTML>-->
+<!--<head>-->
+<!--  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">-->
+<!--</head>-->
+<!--<body>-->
+<!--<header class="header" style="background-color: #ffc24b; color: black" th:fragment = "header" xmlns:sec="http://www.w3.org/1999/xhtml">-->
+
+<!--<nav class="nav" aria-label="Secondary navigation" style="background-color: #ffc24b; color: black">-->
+<!--  <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">-->
+<!--    <img src="/static/images/logo.png" alt="Logo" height="40" width="40">-->
+<!--  </a>-->
+<!--  <li th:if="${#authorization.expression('hasRole(''ROLE_SPECIALIST'')')}">-->
+<!--  <a class="nav-link">-->
+<!--    Чистки-->
+<!--&lt;!&ndash;    <span class="badge text-bg-light rounded-pill align-text-bottom">2</span>&ndash;&gt;-->
+<!--  </a>-->
+<!--  </li>-->
+<!--  <li th:if="${#authorization.expression('hasRole(''ROLE_BOSS'')')}">-->
+<!--    <a class="nav-link">-->
+<!--      Вопросы-->
+<!--    </a>-->
+<!--  </li>-->
+<!--  <li th:if="${#authorization.expression('hasRole(''ROLE_SPECIALIST'')')}">-->
+<!--    <a class="nav-link">Проекты</a>-->
+<!--  </li>-->
+<!--  <li th:if="${#authorization.expression('hasRole(''ROLE_BOSS'')')}">-->
+<!--    <a class="nav-link" >Сотрудники</a>-->
+<!--  </li>-->
+<!--  <a class="nav-link">Аккаунт</a>-->
+<!--  <div sec:authorize="isAuthenticated()">-->
+<!--    <form th:action="@{/logout}" method="post">-->
+<!--      <button type="submit" class="btn btn-outline-primary me-2" style="background-color: #ffc24b; color: black; border-color: #ffc24b">Выход</button>-->
+<!--    </form>-->
+<!--  </div>-->
+<!--</nav>-->
+<!--</header>-->
+<!--</body>-->
+<!--</html>-->
+
 <!DOCTYPE HTML>
 <head>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
 </head>
 <body>
-<header class="header" style="background-color: #ffc24b; color: black" th:fragment = "header" xmlns:sec="http://www.w3.org/1999/xhtml">
+<header class="header" style="background-color: #ffc24b; color: black" th:fragment="header" xmlns:sec="http://www.w3.org/1999/xhtml">
 
-<nav class="nav" aria-label="Secondary navigation" style="background-color: #ffc24b; color: black">
-  <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
-    <img src="/static/images/logo.png" alt="Logo" height="40" width="40">
-  </a>
-  <li th:if="${#authorization.expression('hasRole(''ROLE_SPECIALIST'')')}">
-  <a class="nav-link">
-    Чистки
-<!--    <span class="badge text-bg-light rounded-pill align-text-bottom">2</span>-->
-  </a>
-  </li>
-  <li th:if="${#authorization.expression('hasRole(''ROLE_BOSS'')')}">
-    <a class="nav-link">
-      Вопросы
-    </a>
-  </li>
-  <li th:if="${#authorization.expression('hasRole(''ROLE_SPECIALIST'')')}">
-    <a class="nav-link">Проекты</a>
-  </li>
-  <li th:if="${#authorization.expression('hasRole(''ROLE_BOSS'')')}">
-    <a class="nav-link" >Сотрудники</a>
-  </li>
-  <a class="nav-link">Аккаунт</a>
-  <div sec:authorize="isAuthenticated()">
-    <form th:action="@{/logout}" method="post">
-      <button type="submit" class="btn btn-outline-primary me-2" style="background-color: #ffc24b; color: black; border-color: #ffc24b">Выход</button>
-    </form>
-  </div>
-</nav>
+  <!-- Первый хэдер -->
+  <nav class="nav" aria-label="Secondary navigation" style="background-color: white; color: black">
+
+    <nav class="nav" style="text-align: right">
+      <form th:action="@{/account}" method="post">
+        <!-- Заменяем текст на значок аккаунта -->
+        <button type="submit" class="btn btn-outline-primary me-2" style="background-color: white; color: black; border-color: white">
+          <img src="/static/images/account.png" alt="Аккаунт" height="20" width="20">
+        </button>
+      </form>
+      <form th:action="@{/logout}" method="post">
+        <!-- Заменяем текст на значок аккаунта -->
+        <button type="submit" class="btn btn-outline-primary me-2" style="background-color: white; color: black; border-color: white">
+          <img src="/static/images/logout.png" alt="Выход" height="20" width="20">
+        </button>
+      </form>
+    </nav>
+  </nav>
+
+  <!-- Второй хэдер -->
+  <nav class="nav" aria-label="Secondary navigation" style="background-color: #ffc24b; color: black">
+    <ul class="nav justify-content-end">
+      <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
+        <img src="/static/images/logo.png" alt="Logo" height="40" width="40">
+      </a>
+      <li th:if="${#authorization.expression('hasRole(''ROLE_SPECIALIST'')')}">
+        <a class="nav-link" th:href="@{/loadRep}" style="background-color: #ffc24b; color: black">Чистки</a>
+      </li>
+      <li th:if="${#authorization.expression('hasRole(''ROLE_BOSS'')')}">
+        <a class="nav-link" style="background-color: #ffc24b; color: black">Сообщения</a>
+      </li>
+      <li th:if="${#authorization.expression('hasRole(''ROLE_SPECIALIST'')')}">
+        <a class="nav-link" style="background-color: #ffc24b; color: black">Сообщения</a>
+      </li>
+      <li th:if="${#authorization.expression('hasRole(''ROLE_BOSS'')')}">
+        <a class="nav-link" style="background-color: #ffc24b; color: black">Сотрудники</a>
+      </li>
+    </ul>
+  </nav>
+
 </header>
 </body>
 </html>
-
