adding photo while signing up and showing table from verified file

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -15,7 +15,7 @@
 <header th:insert ="~{fragments/header :: header}"></header>
 </br></br></br>
 <div class="col-12" align="center">
-    <iframe width="50%" height="550" src="https://www.youtube.com/embed/7vh9dLaUZaM?si=aJQbNhONfbt1AlBJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe style="border-radius: 15px" width="50%" height="550" src="https://www.youtube.com/embed/7vh9dLaUZaM?si=aJQbNhONfbt1AlBJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div>
 <footer>
     <div th:replace="fragments/footer :: footer"></div>
