--- a/src/main/resources/templates/loadReport.html
+++ b/src/main/resources/templates/loadReport.html
@@ -12,6 +12,19 @@
   <!-- Bootstrap Bundle JS (jsDelivr CDN) -->
   <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </head>
+<script>
+  function preview(event) {
+    var input = event.target;
+    var files = input.files;
+
+    // Проверяем количество выбранных файлов
+    if (files.length > 1) {
+      alert("Пожалуйста, выберите только один файл.");
+      input.value = ""; // Сбрасываем выбранные файлы
+      return; // Прекращаем выполнение функции
+    }
+  }
+</script>
 <body>
 
 <header th:insert ="~{fragments/header :: header}"></header>
@@ -27,7 +40,7 @@
           <div id="dropContainer" style="border:1px; border-radius:10px; height:200px; background-image: url('/static/images/drag_drop.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center;">
           </div>
           <br>
-          <input type="file" id="fileInput" accept=".csv, .xlsx"/>
+          <input type="file" id="fileInput"   name="fileInput" multiple accept=".csv, .xlsx" onchange="preview(event)"/>
           <script>
             dropContainer.ondragover = dropContainer.ondragenter = function(evt) {
               evt.preventDefault();
@@ -78,6 +91,10 @@
       <div class="col-md-6">
         <input type="text" class="form-control" id="name" placeholder="Название проекта" name="name" required>
       </div>
+    </div>
+    <div th:if="${error} == 'ошибка'">
+      <br>
+      <h5 class="mb-3" style="color: firebrick">Загружен некорректный файл отчёта! Невозможно выполнить чистку</h5>
     </div>
     <br>
       <div class="row g-5">
