--- a/src/main/resources/templates/cleaning.html
+++ b/src/main/resources/templates/cleaning.html
@@ -11,63 +11,139 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <!-- Bootstrap Bundle JS (jsDelivr CDN) -->
   <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <style>
+        .sortable {
+            cursor: pointer;
+            position: relative;
+        }
+
+        .sortable:after {
+            content: "";
+            position: absolute;
+            top: 50%;
+            right: 5px;
+            transform: translateY(-50%);
+            width: 8px;
+            height: 8px;
+            background-repeat: no-repeat;
+            background-position: center;
+        }
+
+        .sortable.asc:after {
+            background-image: url("/static/images/up.png"); /* Иконка вверх при возрастающей сортировке */
+        }
+
+        .sortable.desc:after {
+            background-image: url("/static/images/down.png"); /* Иконка вниз при убывающей сортировке */
+        }
+    </style>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>
+        $(document).ready(function() {
+            $('.sortable').click(function() {
+                var table = $(this).closest('table');
+                var rows = table.find('tbody > tr').get();
+                var index = $(this).index();
+                var isAscending = $(this).hasClass('asc');
+                var isDescending = $(this).hasClass('desc');
+
+                rows.sort(function(a, b) {
+                    var aValue = $(a).find('td').eq(index).text();
+                    var bValue = $(b).find('td').eq(index).text();
+
+                    if ($.isNumeric(aValue) && $.isNumeric(bValue)) {
+                        aValue = parseFloat(aValue);
+                        bValue = parseFloat(bValue);
+                    }
+
+                    if (isAscending) {
+                        return aValue > bValue ? 1 : -1;
+                    } else {
+                        return aValue < bValue ? 1 : -1;
+                    }
+                });
+
+                table.find('th').removeClass('asc desc');
+                if (isAscending) {
+                    $(this).toggleClass('asc desc');
+                } else if (isDescending) {
+                    $(this).toggleClass('asc');
+                } else {
+                    $(this).toggleClass('asc');
+                }
+
+                table.find('tbody').empty().append(rows);
+            });
+        });
+    </script>
 </head>
 <body>
 
 <header th:insert ="~{fragments/header :: header}"></header>
-<div class="container" style="margin-left: 200px; margin-right: 200px;">
-    <br>
-    <h4 class="mb-3">Чистка </h4>
-    <h5 class="mb-3">все запросы представлены в таблице ниже 👇</h5>
-    <br>
-    <table class="table table-striped table-sm">
-        <thead>
-        <tr>
-            <th scope="col">Кампания</th>
-            <th scope="col">Группа</th>
-            <th scope="col">Запрос</th>
-            <th scope="col">Ключ</th>
-            <th scope="col">Показы</th>
-            <th scope="col">Клики</th>
-            <th scope="col">CTR</th>
-            <th scope="col">Цена клика</th>
-            <th scope="col">Конверсии</th>
-            <th scope="col">%Конверсии</th>
-            <th scope="col">Цена цели</th>
-            <th scope="col">Расход</th>
-            <th scope="col">Код валюты</th>
-        </tr>
-        </thead>
-        <tbody>
-        <div th:each="metric : ${metrics}">
-            <tr>
-                <td th:text="${metric.getSearchQuery.getCampaign()}"></td>
-                <td th:text="${metric.getSearchQuery.getAddGroup()}"></td>
-                <td th:text="${metric.getSearchQuery.getText()}"></td>
-                <td th:text="${metric.getSearchQuery.getKeyword()}"></td>
-                <td th:text="${metric.getShows()}"></td>
-                <td th:text="${metric.getClicks()}"></td>
-                <td th:text="${metric.getClicks() div metric.getShows()}" maxFractionDigits="3"></td>
-                <div th:if="${metric.getClicks()} != 0">
-                <td th:text="${metric.getConsumption() div metric.getClicks()}" maxFractionDigits="3"></td>
-                </div>
-                <div th:if="${metric.getClicks()} == 0">
-                    <td>-</td>
-                </div>
-                <td th:text="${metric.getConversions()}"></td>
-                <td th:text="${(metric.getConversions() div metric.getShows()*100)}" maxFractionDigits="3"></td>
-                <div th:if="${metric.getConversions()} != 0">
-                <td th:text="${(metric.getConsumption() div metric.getConversions())}" maxFractionDigits="3"></td>
-                </div>
-                <div th:if="${metric.getConversions()} == 0">
-                    <td>-</td>
-                </div>
-                <td th:text="${metric.getConsumption()}"></td>
-                <td th:text="${metric.getCurrencyCode()}"></td>
-            </tr>
+
+<div class="container" style="margin-right: 100px;">
+    <div class="row">
+        <div class="col" style="width: 300px"><br><br><br><br><br><h4>Фильтры </h4><h4>Фильтры </h4><h4>Фильтры </h4></div>
+            <div class="col">
+                <br>
+                <h4>Чистка </h4>
+                <h5>все запросы представлены в таблице ниже 👇</h5>
+                <br>
+        <!--    <div class="container" style="width: 1200px">-->
+                <div style="max-height: 400px; overflow-x: scroll; width: 1000px">
+                    <table class="table table-striped table-sm table-b table-bordered" style="text-align: left;">
+                        <thead>
+                        <tr>
+                            <th class="sortable" scope="col">Кампания</th>
+                            <th class="sortable" scope="col">Группа</th>
+                            <th class="sortable" scope="col">Запрос</th>
+                            <th class="sortable" scope="col">Ключ</th>
+                            <th class="sortable" scope="col">Показы</th>
+                            <th class="sortable" scope="col">Клики</th>
+                            <th class="sortable" scope="col">CTR</th>
+                            <th class="sortable" scope="col">Цена клика</th>
+                            <th class="sortable" scope="col">Конверсии</th>
+                            <th class="sortable" scope="col">%Конверсии</th>
+                            <th class="sortable" scope="col">Цена цели</th>
+                            <th class="sortable" scope="col">Расход</th>
+                            <th class="sortable" scope="col">Код валюты</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <div th:each="metric : ${metrics}">
+                            <tr>
+                                <td th:text="${metric.getSearchQuery.getCampaign()}"></td>
+                                <td th:text="${metric.getSearchQuery.getAddGroup()}"></td>
+                                <td th:text="${metric.getSearchQuery.getText()}"></td>
+                                <td th:text="${metric.getSearchQuery.getKeyword()}"></td>
+                                <td th:text="${metric.getShows()}"></td>
+                                <td th:text="${metric.getClicks()}"></td>
+                                <td th:text="${metric.getClicks() div metric.getShows()}" maxFractionDigits="3"></td>
+                                <div th:if="${metric.getClicks()} != 0">
+                                <td th:text="${metric.getConsumption() div metric.getClicks()}" maxFractionDigits="3"></td>
+                                </div>
+                                <div th:if="${metric.getClicks()} == 0">
+                                    <td>-</td>
+                                </div>
+                                <td th:text="${metric.getConversions()}"></td>
+                                <td th:text="${(metric.getConversions() div metric.getShows()*100)}" maxFractionDigits="3"></td>
+                                <div th:if="${metric.getConversions()} != 0">
+                                <td th:text="${(metric.getConsumption() div metric.getConversions())}" maxFractionDigits="3"></td>
+                                </div>
+                                <div th:if="${metric.getConversions()} == 0">
+                                    <td>-</td>
+                                </div>
+                                <td th:text="${metric.getConsumption()}"></td>
+                                <td th:text="${metric.getCurrencyCode()}"></td>
+                            </tr>
+                        </div>
+                        </tbody>
+                    </table>
+        <!--        </div>-->
+            </div>
         </div>
-        </tbody>
-    </table>
+    </div>
 <div th:replace="fragments/footer :: footer"></div>
 </div>
 </body>
