--- a/src/main/resources/templates/cleaning.html
+++ b/src/main/resources/templates/cleaning.html
@@ -82,66 +82,220 @@
 
 <header th:insert ="~{fragments/header :: header}"></header>
 
-<div class="container" style="margin-right: 100px;">
+<div class="container" style="margin-right: 100px">
     <div class="row">
-        <div class="col" style="width: 300px"><br><br><br><br><br><h4>Фильтры </h4><h4>Фильтры </h4><h4>Фильтры </h4></div>
-            <div class="col">
-                <br>
-                <h4>Чистка </h4>
-                <h5>все запросы представлены в таблице ниже 👇</h5>
-                <br>
-        <!--    <div class="container" style="width: 1200px">-->
-                <div style="max-height: 400px; overflow-x: scroll; width: 1000px">
-                    <table class="table table-striped table-sm table-b table-bordered" style="text-align: left;">
-                        <thead>
-                        <tr>
-                            <th class="sortable" scope="col">Кампания</th>
-                            <th class="sortable" scope="col">Группа</th>
-                            <th class="sortable" scope="col">Запрос</th>
-                            <th class="sortable" scope="col">Ключ</th>
-                            <th class="sortable" scope="col">Показы</th>
-                            <th class="sortable" scope="col">Клики</th>
-                            <th class="sortable" scope="col">CTR</th>
-                            <th class="sortable" scope="col">Цена клика</th>
-                            <th class="sortable" scope="col">Конверсии</th>
-                            <th class="sortable" scope="col">%Конверсии</th>
-                            <th class="sortable" scope="col">Цена цели</th>
-                            <th class="sortable" scope="col">Расход</th>
-                            <th class="sortable" scope="col">Код валюты</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <div th:each="metric : ${metrics}">
-                            <tr>
-                                <td th:text="${metric.getSearchQuery.getCampaign()}"></td>
-                                <td th:text="${metric.getSearchQuery.getAddGroup()}"></td>
-                                <td th:text="${metric.getSearchQuery.getText()}"></td>
-                                <td th:text="${metric.getSearchQuery.getKeyword()}"></td>
-                                <td th:text="${metric.getShows()}"></td>
-                                <td th:text="${metric.getClicks()}"></td>
-                                <td th:text="${metric.getClicks() div metric.getShows()}" maxFractionDigits="3"></td>
-                                <div th:if="${metric.getClicks()} != 0">
-                                <td th:text="${metric.getConsumption() div metric.getClicks()}" maxFractionDigits="3"></td>
-                                </div>
-                                <div th:if="${metric.getClicks()} == 0">
-                                    <td>-</td>
-                                </div>
-                                <td th:text="${metric.getConversions()}"></td>
-                                <td th:text="${(metric.getConversions() div metric.getShows()*100)}" maxFractionDigits="3"></td>
-                                <div th:if="${metric.getConversions()} != 0">
-                                <td th:text="${(metric.getConsumption() div metric.getConversions())}" maxFractionDigits="3"></td>
-                                </div>
-                                <div th:if="${metric.getConversions()} == 0">
-                                    <td>-</td>
-                                </div>
-                                <td th:text="${metric.getConsumption()}"></td>
-                                <td th:text="${metric.getCurrencyCode()}"></td>
-                            </tr>
+        <div class="col" style="width: 300px"><br>
+            <form class="needs-validation" style="padding: 10px; border-radius: 10px; background-color: lightgray" th:method="post" th:action="@{/filter}"><h4>Фильтры:</h4>
+                <div class="form-floating mb-3" style="color: black">
+                    <input type="text" class="form-control" id="campaign" placeholder="campaign" name="campaign">
+                    <label for="campaign">Название кампании содержит</label>
+                </div>
+                <div class="form-floating mb-3" style="color: black">
+                    <input type="text" class="form-control" id="group" placeholder="group" name="group">
+                    <label for="group">Название группы содержит</label>
+                </div>
+                <div class="form-floating mb-3" style="color: black">
+                    <input type="text" class="form-control" id="query" placeholder="query" name="query">
+                    <label for="group">Текст запроса содержит</label>
+                </div>
+                <h6>Показы</h6>
+                <div class="row">
+                    <div class="col">
+                        <select class="form-select" required id="Showsselect" name="Showsselect" style="width: 150px">
+                            <option value="Больше" selected>Больше</option>
+                            <option value="Меньше">Меньше</option>
+                            <option value="Равно">Равно</option>
+                        </select>
+                    </div>
+                    <div class="col">
+                        <div class="form-floating">
+                            <input type="number" class="form-control" style="height: 35px" id="Shows" placeholder="0" name="Shows" min="0" max="100">
                         </div>
-                        </tbody>
-                    </table>
-        <!--        </div>-->
-            </div>
+                    </div>
+                </div>
+                <br>
+                <h6>Клики</h6>
+                <div class="row">
+                    <div class="col">
+                        <select class="form-select" required name="Clicksselect" style="width: 150px">
+                            <option value="Больше" selected>Больше</option>
+                            <option value="Меньше">Меньше</option>
+                            <option value="Равно">Равно</option>
+                        </select>
+                    </div>
+                    <div class="col">
+                        <div class="form-floating">
+                            <input type="number" class="form-control" style="height: 35px" id="Clicks" placeholder="0" name="Clicks" min="0" max="100">
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <h6>CTR</h6>
+                <div class="row">
+                    <div class="col">
+                        <select class="form-select" required id="CTRselect" name="CTRselect" style="width: 150px">
+                            <option value="Больше" selected>Больше</option>
+                            <option value="Меньше">Меньше</option>
+                            <option value="Равно">Равно</option>
+                        </select>
+                    </div>
+                    <div class="col">
+                        <div class="form-floating">
+                            <input type="number" class="form-control" style="height: 35px" id="CTR" placeholder="0" name="CTR" min="0" max="100">
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <h6>Цена клика</h6>
+                <div class="row">
+                    <div class="col">
+                        <select class="form-select" required id="СostClickselect" name="СostClickselect" style="width: 150px">
+                            <option value="Больше" selected>Больше</option>
+                            <option value="Меньше">Меньше</option>
+                            <option value="Равно">Равно</option>
+                        </select>
+                    </div>
+                    <div class="col">
+                        <div class="form-floating">
+                            <input type="number" class="form-control" style="height: 35px" id="СostClick" placeholder="0" name="СostClick" min="0" max="100">
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <h6>Конверсии</h6>
+                <div class="row">
+                    <div class="col">
+                        <select class="form-select" required id="Convselect" name="Convselect" style="width: 150px">
+                            <option value="Больше" selected>Больше</option>
+                            <option value="Меньше">Меньше</option>
+                            <option value="Равно">Равно</option>
+                        </select>
+                    </div>
+                    <div class="col">
+                        <div class="form-floating">
+                            <input type="number" class="form-control" style="height: 35px" id="Conv" placeholder="0" name="Conv" min="0" max="100">
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <h6>%Конверсии</h6>
+                <div class="row">
+                    <div class="col">
+                        <select class="form-select" required id="PerConvselect" name="PerConvselect" style="width: 150px">
+                            <option value="Больше" selected>Больше</option>
+                            <option value="Меньше">Меньше</option>
+                            <option value="Равно">Равно</option>
+                        </select>
+                    </div>
+                    <div class="col">
+                        <div class="form-floating">
+                            <input type="number" class="form-control" style="height: 35px" id="PerConv" placeholder="0" name="PerConv" min="0" max="100">
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <h6>Цена цели</h6>
+                <div class="row">
+                    <div class="col">
+                        <select class="form-select" required id="СostConvselect" name="СostConvselect" style="width: 150px">
+                            <option value="Больше" selected>Больше</option>
+                            <option value="Меньше">Меньше</option>
+                            <option value="Равно">Равно</option>
+                        </select>
+                    </div>
+                    <div class="col">
+                        <div class="form-floating">
+                            <input type="number" class="form-control" style="height: 35px" id="СostConv" placeholder="0" name="СostConv" min="0" max="100">
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <h6>Расход</h6>
+                <div class="row">
+                    <div class="col">
+                        <select class="form-select" required id="Сonsselect" name="Сonsselect" style="width: 150px">
+                            <option value="Больше" selected>Больше</option>
+                            <option value="Меньше">Меньше</option>
+                            <option value="Равно">Равно</option>
+                        </select>
+                    </div>
+                    <div class="col">
+                        <div class="form-floating">
+                            <input type="number" class="form-control" style="height: 35px" id="Сons" placeholder="0" name="Сons" min="0" max="100">
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <div class="row">
+                    <div class="col">
+                        <button class="w-100 btn btn-lg btn-light" style = "background-color: #ffc24b; border-color:lightgray;color: black;" type="submit">Показать</button>
+                    </div>
+                </div>
+                <br>
+            </form>
+        </div>
+        <div class="col">
+            <br>
+            <h4>Чистка </h4>
+            <h5>все запросы представлены в таблице ниже 👇</h5>
+            <br>
+    <!--    <div class="container" style="width: 1200px">-->
+            <div style="max-height: 400px; overflow-x: scroll; width: 1000px">
+                <table class="table table-striped table-sm table-b table-bordered" style="text-align: left;">
+                    <thead>
+                    <tr>
+                        <th class="sortable" scope="col">Кампания</th>
+                        <th class="sortable" scope="col">Группа</th>
+                        <th class="sortable" scope="col">Запрос</th>
+                        <th class="sortable" scope="col">Ключ</th>
+                        <th class="sortable" scope="col">Показы</th>
+                        <th class="sortable" scope="col">Клики</th>
+                        <th class="sortable" scope="col">CTR</th>
+                        <th class="sortable" scope="col">Цена клика</th>
+                        <th class="sortable" scope="col">Конверсии</th>
+                        <th class="sortable" scope="col">%Конверсии</th>
+                        <th class="sortable" scope="col">Цена цели</th>
+                        <th class="sortable" scope="col">Расход</th>
+                        <th class="sortable" scope="col">Код валюты</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+<!--                    <li th:if="${metric.size()} > '0'">-->
+                    <div th:each="metric : ${metrics}">
+                        <tr>
+                            <td th:text="${metric.getSearchQuery.getCampaign()}"></td>
+                            <td th:text="${metric.getSearchQuery.getAddGroup()}"></td>
+                            <td th:text="${metric.getSearchQuery.getText()}"></td>
+                            <td th:text="${metric.getSearchQuery.getKeyword()}"></td>
+                            <td th:text="${metric.getShows()}"></td>
+                            <td th:text="${metric.getClicks()}"></td>
+                            <td th:text="${((metric.getClicks()*1.0) div metric.getShows())}" maxFractionDigits="3"></td>
+                            <div th:if="${metric.getClicks()} != 0">
+                            <td th:text="${metric.getConsumption() div metric.getClicks()}" maxFractionDigits="3"></td>
+                            </div>
+                            <div th:if="${metric.getClicks()} == 0">
+                                <td>-</td>
+                            </div>
+                            <td th:text="${metric.getConversions()}"></td>
+                            <td th:text="${((metric.getConversions()*1.0) div metric.getShows()*100)}" maxFractionDigits="3"></td>
+                            <div th:if="${metric.getConversions()} != 0">
+                            <td th:text="${(metric.getConsumption() div metric.getConversions())}" maxFractionDigits="3"></td>
+                            </div>
+                            <div th:if="${metric.getConversions()} == 0">
+                                <td>-</td>
+                            </div>
+                            <td th:text="${metric.getConsumption()}"></td>
+                            <td th:text="${metric.getCurrencyCode()}"></td>
+                        </tr>
+                    </div>
+<!--                    </li>-->
+<!--                    <li th:if="${metric.size()} == '0'">-->
+<!--                        <label style="text-align: center">По Вашему запросу ничего не найдено</label>-->
+<!--                    </li>-->
+                    </tbody>
+                </table>
+    <!--        </div>-->
+        </div>
         </div>
     </div>
 <div th:replace="fragments/footer :: footer"></div>
