--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -9,7 +9,9 @@
 
 <div class="container">
   <footer th:fragment="footer" class="d-flex align-items-center">
-      <div class="col">
+      <br>
+      <br>
+      <div class="col" style="text-align: center; background-color: dimgrey">
       <br>
       <p class="text-body-secondary" style="color: white">info@company.by</p>
       <p class="text-body-secondary" style="color: white">© 2023</p>
