--- a/src/main/resources/templates/cleaning.html
+++ b/src/main/resources/templates/cleaning.html
@@ -2,16 +2,40 @@
 <html lang="ru" xmlns:th="http://thymeleaf.org">
 
 <head>
-  <title>addore</title>
-  <meta charset="utf-8">
-  <!-- Настройка viewport -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>...</title>
-  <!-- Bootstrap CSS (jsDelivr CDN) -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <!-- Bootstrap Bundle JS (jsDelivr CDN) -->
-  <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <title>addore</title>
+    <meta charset="utf-8">
+    <!-- Настройка viewport -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>...</title>
+    <!-- Bootstrap CSS (jsDelivr CDN) -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- Bootstrap Bundle JS (jsDelivr CDN) -->
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <style>
+        #topBtn {
+            display: none;
+            position: fixed;
+            font-size: 24px;
+            align-items: center;
+            font-weight: bold;
+            bottom: 20px;
+            right: 20px;
+            z-index: 99;
+            border: none;
+            outline: none;
+            background-color: #cbcdcd;
+            color: white;
+            cursor: pointer;
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            opacity: 0.7;
+        }
+
+        #topBtn:hover {
+            background-color: #ffc24b;
+            color: white;
+        }
         .sortable {
             cursor: pointer;
             position: relative;
@@ -40,6 +64,21 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
+        window.onscroll = function() {scrollFunction()};
+
+        function scrollFunction() {
+            if (document.body.scrollTop > 400 || document.documentElement.scrollTop > 400) {
+                document.getElementById("topBtn").style.display = "block";
+            } else {
+                document.getElementById("topBtn").style.display = "none";
+            }
+        }
+
+        // When the user clicks on the button, scroll to the top of the document
+        function topFunction() {
+            document.body.scrollTop = 0;
+            document.documentElement.scrollTop = 0;
+        }
         $(document).ready(function() {
             $('.sortable').click(function() {
                 var table = $(this).closest('table');
@@ -109,7 +148,7 @@
                     </div>
                     <div class="col">
                         <div class="form-floating">
-                            <input type="number" class="form-control" style="height: 35px" id="Shows" placeholder="0" name="Shows" min="0" max="100">
+                            <input type="number" class="form-control" style="height: 35px" id="Shows" placeholder="0" name="Shows" min="0" max="100000">
                         </div>
                     </div>
                 </div>
@@ -125,7 +164,7 @@
                     </div>
                     <div class="col">
                         <div class="form-floating">
-                            <input type="number" class="form-control" style="height: 35px" id="Clicks" placeholder="0" name="Clicks" min="0" max="100">
+                            <input type="number" class="form-control" style="height: 35px" id="Clicks" placeholder="0" name="Clicks" min="0" max="10000">
                         </div>
                     </div>
                 </div>
@@ -141,7 +180,7 @@
                     </div>
                     <div class="col">
                         <div class="form-floating">
-                            <input type="number" class="form-control" style="height: 35px" id="CTR" placeholder="0" name="CTR" min="0" max="100">
+                            <input type="number" class="form-control" style="height: 35px" id="CTR" placeholder="0" name="CTR" min="0" max="1" step="0.01">
                         </div>
                     </div>
                 </div>
@@ -157,7 +196,7 @@
                     </div>
                     <div class="col">
                         <div class="form-floating">
-                            <input type="number" class="form-control" style="height: 35px" id="СostClick" placeholder="0" name="СostClick" min="0" max="100">
+                            <input type="number" class="form-control" style="height: 35px" id="СostClick" placeholder="0" name="СostClick" min="0" max="100" step="0.01">
                         </div>
                     </div>
                 </div>
@@ -173,7 +212,7 @@
                     </div>
                     <div class="col">
                         <div class="form-floating">
-                            <input type="number" class="form-control" style="height: 35px" id="Conv" placeholder="0" name="Conv" min="0" max="100">
+                            <input type="number" class="form-control" style="height: 35px" id="Conv" placeholder="0" name="Conv" min="0" max="1000">
                         </div>
                     </div>
                 </div>
@@ -189,7 +228,7 @@
                     </div>
                     <div class="col">
                         <div class="form-floating">
-                            <input type="number" class="form-control" style="height: 35px" id="PerConv" placeholder="0" name="PerConv" min="0" max="100">
+                            <input type="number" class="form-control" style="height: 35px" id="PerConv" placeholder="0" name="PerConv" min="0" max="100" step="0.01">
                         </div>
                     </div>
                 </div>
@@ -205,7 +244,7 @@
                     </div>
                     <div class="col">
                         <div class="form-floating">
-                            <input type="number" class="form-control" style="height: 35px" id="СostConv" placeholder="0" name="СostConv" min="0" max="100">
+                            <input type="number" class="form-control" style="height: 35px" id="СostConv" placeholder="0" name="СostConv" min="0" max="200" step="0.01">
                         </div>
                     </div>
                 </div>
@@ -221,7 +260,7 @@
                     </div>
                     <div class="col">
                         <div class="form-floating">
-                            <input type="number" class="form-control" style="height: 35px" id="Сons" placeholder="0" name="Сons" min="0" max="100">
+                            <input type="number" class="form-control" style="height: 35px" id="Сons" placeholder="0" name="Сons" min="0" max="1000" step="0.01">
                         </div>
                     </div>
                 </div>
@@ -239,66 +278,84 @@
             <h4>Чистка </h4>
             <h5>все запросы представлены в таблице ниже 👇</h5>
             <br>
-    <!--    <div class="container" style="width: 1200px">-->
-            <div style="max-height: 400px; overflow-x: scroll; width: 1000px">
-                <table class="table table-striped table-sm table-b table-bordered" style="text-align: left;">
-                    <thead>
-                    <tr>
-                        <th class="sortable" scope="col">Кампания</th>
-                        <th class="sortable" scope="col">Группа</th>
-                        <th class="sortable" scope="col">Запрос</th>
-                        <th class="sortable" scope="col">Ключ</th>
-                        <th class="sortable" scope="col">Показы</th>
-                        <th class="sortable" scope="col">Клики</th>
-                        <th class="sortable" scope="col">CTR</th>
-                        <th class="sortable" scope="col">Цена клика</th>
-                        <th class="sortable" scope="col">Конверсии</th>
-                        <th class="sortable" scope="col">%Конверсии</th>
-                        <th class="sortable" scope="col">Цена цели</th>
-                        <th class="sortable" scope="col">Расход</th>
-                        <th class="sortable" scope="col">Код валюты</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-<!--                    <li th:if="${metric.size()} > '0'">-->
-                    <div th:each="metric : ${metrics}">
+            <!--    <div class="container" style="width: 1200px">-->
+
+                <div class="row">
+                    <div style="max-height: 400px; overflow-x: scroll; width: 1000px">
+                    <table class="table table-striped table-sm table-b table-bordered" style="text-align: left">
+                        <thead style="background-color: #ffc24b; border-color: white; color: black; font-weight: normal">
                         <tr>
-                            <td th:text="${metric.getSearchQuery.getCampaign()}"></td>
-                            <td th:text="${metric.getSearchQuery.getAddGroup()}"></td>
-                            <td th:text="${metric.getSearchQuery.getText()}"></td>
-                            <td th:text="${metric.getSearchQuery.getKeyword()}"></td>
-                            <td th:text="${metric.getShows()}"></td>
-                            <td th:text="${metric.getClicks()}"></td>
-                            <td th:text="${((metric.getClicks()*1.0) div metric.getShows())}" maxFractionDigits="3"></td>
-                            <div th:if="${metric.getClicks()} != 0">
-                            <td th:text="${metric.getConsumption() div metric.getClicks()}" maxFractionDigits="3"></td>
-                            </div>
-                            <div th:if="${metric.getClicks()} == 0">
-                                <td>-</td>
-                            </div>
-                            <td th:text="${metric.getConversions()}"></td>
-                            <td th:text="${((metric.getConversions()*1.0) div metric.getShows()*100)}" maxFractionDigits="3"></td>
-                            <div th:if="${metric.getConversions()} != 0">
-                            <td th:text="${(metric.getConsumption() div metric.getConversions())}" maxFractionDigits="3"></td>
-                            </div>
-                            <div th:if="${metric.getConversions()} == 0">
-                                <td>-</td>
-                            </div>
-                            <td th:text="${metric.getConsumption()}"></td>
-                            <td th:text="${metric.getCurrencyCode()}"></td>
+                            <th class="sortable" scope="col">Кампания</th>
+                            <th class="sortable" scope="col">Группа</th>
+                            <th class="sortable" scope="col">Запрос</th>
+                            <th class="sortable" scope="col">Ключ</th>
+                            <th class="sortable" scope="col">Показы</th>
+                            <th class="sortable" scope="col">Клики</th>
+                            <th class="sortable" scope="col">CTR</th>
+                            <th class="sortable" scope="col">Цена клика</th>
+                            <th class="sortable" scope="col">Конверсии</th>
+                            <th class="sortable" scope="col">%Конверсии</th>
+                            <th class="sortable" scope="col">Цена цели</th>
+                            <th class="sortable" scope="col">Расход</th>
+                            <th class="sortable" scope="col">Код валюты</th>
                         </tr>
+                        </thead>
+                        <tbody>
+                       <div th:if="${metrics.get(0)} != 'null'">
+                           <div th:each="metric : ${metrics}">
+                                <tr>
+                                    <td th:text="${metric.getSearchQuery.getCampaign()}"></td>
+                                    <td th:text="${metric.getSearchQuery.getAddGroup()}"></td>
+                                    <td th:text="${metric.getSearchQuery.getText()}"></td>
+                                    <td th:text="${metric.getSearchQuery.getKeyword()}"></td>
+                                    <td th:text="${metric.getShows()}"></td>
+                                    <td th:text="${metric.getClicks()}"></td>
+                                    <td th:text="${#numbers.formatDecimal(((metric.getClicks() * 1.0) div metric.getShows()), 1, 'DEFAULT', 2, 'DEFAULT')}"></td>
+                                    <div th:if="${metric.getClicks()} != 0">
+                                        <td th:text="${#numbers.formatDecimal((metric.getConsumption() div metric.getClicks()), 1, 'DEFAULT', 2, 'DEFAULT')}"></td>
+                                    </div>
+                                    <div th:if="${metric.getClicks()} == 0">
+                                        <td>-</td>
+                                    </div>
+                                    <td th:text="${metric.getConversions()}"></td>
+                                    <td th:text="${#numbers.formatDecimal(((metric.getConversions()*1.0) div metric.getShows()), 1, 'DEFAULT', 2, 'DEFAULT')}"></td>
+                                    <div th:if="${metric.getConversions()} != 0">
+                                        <td th:text="${#numbers.formatDecimal((metric.getConsumption() div metric.getConversions()), 1, 'DEFAULT', 2, 'DEFAULT')}"></td>
+                                    </div>
+                                    <div th:if="${metric.getConversions()} == 0">
+                                        <td>-</td>
+                                    </div>
+                                    <td th:text="${metric.getConsumption()}"></td>
+                                    <td th:text="${metric.getCurrencyCode()}"></td>
+                                </tr>
+                           </div>
+                       </div>
+                        </tbody>
+                    </table>
                     </div>
-<!--                    </li>-->
-<!--                    <li th:if="${metric.size()} == '0'">-->
-<!--                        <label style="text-align: center">По Вашему запросу ничего не найдено</label>-->
-<!--                    </li>-->
-                    </tbody>
-                </table>
-    <!--        </div>-->
-        </div>
+                </div>
+                <div th:if="${metrics.get(0)} == 'null'">
+                    <div class="row">
+                        <br>
+                        <label style="text-align: center; color: firebrick">По Вашему запросу ничего не найдено</label>
+                        <br>
+                    </div>
+                </div>
+                    <form class="needs-validation" style="padding: 10px" th:method="post" th:action="@{/forecast}">
+                        <br>
+                        <div class="row">
+                            <div class="col">
+                                <button class="w-100 btn btn-lg btn-light" style = "background-color: #ffc24b; border-color:white;color: black" type="submit">Спрогнозировать минус-фразы</button>
+                            </div>
+                        </div>
+                        <br>
+                    </form>
+            </div>
+    </div>
         </div>
     </div>
-<div th:replace="fragments/footer :: footer"></div>
 </div>
+<button onclick="topFunction()" id="topBtn" title="Go to top" style="padding: 0">^</button>
+<div th:replace="fragments/footer :: footer"></div>
 </body>
 </html>
