check cells in table

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -8,15 +8,19 @@
 <body>
 
 <div class="container">
-  <footer th:fragment="footer" class="d-flex align-items-center">
-      <br>
-      <br>
+<div class="row">
+    <br>
+    <br>
+</div>
+<footer th:fragment="footer" class="d-flex align-items-center" style="padding-top: 20px">
+    <br>
+    <br>
       <div class="col" style="text-align: center; background-color: dimgrey">
-      <br>
-      <p class="text-body-secondary" style="color: white">info@company.by</p>
-      <p class="text-body-secondary" style="color: white">© 2023</p>
-    </div>
-  </footer>
+          <br>
+          <p class="text-body-secondary" style="color: white">info@company.by</p>
+          <p class="text-body-secondary" style="color: white">© 2023</p>
+      </div>
+</footer>
 </div>
 </body>
 </html>
