--- a/src/main/resources/templates/cleaning.html
+++ b/src/main/resources/templates/cleaning.html
@@ -278,32 +278,60 @@
             <h4>Чистка </h4>
             <h5>все запросы представлены в таблице ниже 👇</h5>
             <br>
-            <!--    <div class="container" style="width: 1200px">-->
+            <div class="row">
+                <div class="col" style="padding-left: 5px">
+                    <label style="color: dimgrey">
+                        <input type="checkbox" id="selectAllCheckbox"> Выделить все
+                    </label>
+                </div>
+                <script>
+                    // Обработка изменений состояния чекбокса "Выделить все"
+                    const selectAllCheckbox = document.getElementById('selectAllCheckbox');
+                    selectAllCheckbox.addEventListener('change', toggleAllCheckboxes);
 
-                <div class="row">
-                    <div style="max-height: 400px; overflow-x: scroll; width: 1000px">
+                    // Функция для выделения или снятия выделения со всех чекбоксов
+                    function toggleAllCheckboxes() {
+                        const checkboxes = document.querySelectorAll('input[name="selectedMetrics"]');
+
+                        checkboxes.forEach((checkbox) => {
+                            checkbox.checked = selectAllCheckbox.checked;
+                        });
+
+                        updateButtonVisibility();
+                    }
+                </script>
+                <div class="col"></div>
+                <div class="col"></div>
+                <div class="col"></div>
+                <div class="col"></div>
+                <div class="col"></div>
+            </div>
+            <div class="row">
+                <div style="max-height: 400px; overflow-x: scroll; width: 1000px">
                     <table class="table table-striped table-sm table-b table-bordered" style="text-align: left">
-                        <thead style="background-color: #ffc24b; border-color: white; color: black; font-weight: normal">
-                        <tr>
-                            <th class="sortable" scope="col">Кампания</th>
-                            <th class="sortable" scope="col">Группа</th>
-                            <th class="sortable" scope="col">Запрос</th>
-                            <th class="sortable" scope="col">Ключ</th>
-                            <th class="sortable" scope="col">Показы</th>
-                            <th class="sortable" scope="col">Клики</th>
-                            <th class="sortable" scope="col">CTR</th>
-                            <th class="sortable" scope="col">Цена клика</th>
-                            <th class="sortable" scope="col">Конверсии</th>
-                            <th class="sortable" scope="col">%Конверсии</th>
-                            <th class="sortable" scope="col">Цена цели</th>
-                            <th class="sortable" scope="col">Расход</th>
-                            <th class="sortable" scope="col">Код валюты</th>
+                        <thead style="background-color: #ffc24b; border-color: white; color: black; font-weight: normal; border-bottom: none">
+                        <tr style="font-weight: normal; border-top: none">
+                            <th scope="col" style="width: 40px"></th>
+                            <th class="sortable" style="font-weight: normal; border-bottom: none" scope="col">Кампания</th>
+                            <th class="sortable" style="font-weight: normal" scope="col">Группа</th>
+                            <th class="sortable" style="font-weight: normal" scope="col">Запрос</th>
+                            <th class="sortable" style="font-weight: normal" scope="col">Ключ</th>
+                            <th class="sortable" style="font-weight: normal" scope="col">Показы</th>
+                            <th class="sortable" style="font-weight: normal" scope="col">Клики</th>
+                            <th class="sortable" style="font-weight: normal" scope="col">CTR</th>
+                            <th class="sortable" style="font-weight: normal" scope="col">Цена клика</th>
+                            <th class="sortable" style="font-weight: normal" scope="col">Конверсии</th>
+                            <th class="sortable" style="font-weight: normal" scope="col">%Конверсии</th>
+                            <th class="sortable" style="font-weight: normal" scope="col">Цена цели</th>
+                            <th class="sortable" style="font-weight: normal" scope="col">Расход</th>
+                            <th class="sortable" style="font-weight: normal" scope="col">Код валюты</th>
                         </tr>
                         </thead>
                         <tbody>
                        <div th:if="${metrics.get(0)} != 'null'">
                            <div th:each="metric : ${metrics}">
                                 <tr>
+                                    <td style="padding-right: 10px; padding-left: 10px"><input type="checkbox" name="selectedMetrics" value="${metric.getId()}" /></td>
                                     <td th:text="${metric.getSearchQuery.getCampaign()}"></td>
                                     <td th:text="${metric.getSearchQuery.getAddGroup()}"></td>
                                     <td th:text="${metric.getSearchQuery.getText()}"></td>
@@ -332,7 +360,7 @@
                        </div>
                         </tbody>
                     </table>
-                    </div>
+                   </div>
                 </div>
                 <div th:if="${metrics.get(0)} == 'null'">
                     <div class="row">
@@ -341,17 +369,52 @@
                         <br>
                     </div>
                 </div>
-                    <form class="needs-validation" style="padding: 10px" th:method="post" th:action="@{/forecast}">
-                        <br>
-                        <div class="row">
-                            <div class="col">
-                                <button class="w-100 btn btn-lg btn-light" style = "background-color: #ffc24b; border-color:white;color: black" type="submit">Спрогнозировать минус-фразы</button>
+                <div class="row" style="text-align: left">
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col">
+                        <form class="needs-validation" style="padding: 10px" th:method="post" th:action="@{/forecast}">
+                            <div class="row">
+                                <div class="col">
+                                    <button class="w-100 btn btn-lg btn-light" style = "background-color: #ffc24b; border-color:white;color: black; font-size: smaller" type="submit">Прогноз минус-слов</button>
+                                </div>
                             </div>
-                        </div>
-                        <br>
-                    </form>
+                        </form>
+                    </div>
+                    <div class="col">
+                        <form class="needs-validation" style="padding: 10px" th:method="post" th:action="@{/addQueries}">
+                            <div class="row">
+                                <div class="col">
+                                    <button class="w-100 btn btn-lg btn-light" id="addButton" style = "background-color: #ffc24b; border-color:white;color: black; display: none; font-size: smaller" type="submit">В минус-фразы</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                    <script>
+                        // Отслеживание изменений состояния чекбоксов
+                        const checkboxes = document.querySelectorAll('input[name="selectedMetrics"]');
+                        checkboxes.forEach((checkbox) => {
+                            checkbox.addEventListener('change', updateButtonVisibility);
+                        });
+
+                        // Функция для обновления видимости кнопки
+                        function updateButtonVisibility() {
+                            const button = document.getElementById('addButton');
+                            const checkedCheckboxes = document.querySelectorAll(
+                                'input[name="selectedMetrics"]:checked'
+                            );
+
+                            // Проверка количества выбранных чекбоксов и установка видимости кнопки
+                            if (checkedCheckboxes.length > 0) {
+                                button.style.display = 'block';
+                            } else {
+                                button.style.display = 'none';
+                            }
+                        }
+                    </script>
+                <div>
+                </div>
             </div>
-    </div>
         </div>
     </div>
 </div>
