new page for forecast, filter text, title icon

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,6 +10,8 @@
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
             crossorigin="anonymous"></script>
+    <link rel="icon" href="https://cdn0.iconfinder.com/data/icons/business-1390/24/20_-_Company-2-256.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://cdn0.iconfinder.com/data/icons/business-1390/24/20_-_Company-2-256.png" type="image/x-icon">
 </head>
 <body>
 <header th:insert ="~{fragments/header :: header}"></header>
@@ -17,9 +19,6 @@
 <div class="col-12" align="center">
     <iframe style="border-radius: 15px" width="50%" height="550" src="https://www.youtube.com/embed/7vh9dLaUZaM?si=aJQbNhONfbt1AlBJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div>
-<footer>
-    <div th:replace="fragments/footer :: footer"></div>
-</footer>
 <div th:replace="fragments/footer :: footer"></div>
 </body>
 </html>
