--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -32,6 +32,8 @@
             reader.readAsDataURL(files[0]);
         }
     </script>
+    <link rel="icon" href="https://cdn0.iconfinder.com/data/icons/business-1390/24/20_-_Company-2-256.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://cdn0.iconfinder.com/data/icons/business-1390/24/20_-_Company-2-256.png" type="image/x-icon">
 </head>
 
 <body class="text-center" style = "background-color: dimgray; border-color: white; color: black">
