--- a/src/main/resources/templates/analysis.html
+++ b/src/main/resources/templates/analysis.html
@@ -2,7 +2,7 @@
 <html lang="ru" xmlns:th="http://thymeleaf.org">
 
 <head>
-    <title>addore</title>
+    <title>cleaning</title>
     <meta charset="utf-8">
     <!-- Настройка viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,6 +11,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Bootstrap Bundle JS (jsDelivr CDN) -->
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <link rel="icon" href="https://cdn0.iconfinder.com/data/icons/business-1390/24/20_-_Company-2-256.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://cdn0.iconfinder.com/data/icons/business-1390/24/20_-_Company-2-256.png" type="image/x-icon">
     <style>
         #topBtn {
             display: none;
@@ -228,7 +230,7 @@
                         </div>
                         <div class="col">
                             <div class="form-floating">
-                                <input type="number" class="form-control" style="height: 35px" id="PerConv" placeholder="0" name="PerConv" min="0" max="100" step="0.01">
+                                <input type="number" class="form-control" style="height: 35px" id="PerConv" placeholder="0" name="PerConv" min="0" max="1" step="0.01">
                             </div>
                         </div>
                     </div>
@@ -277,7 +279,7 @@
             <br>
             <h4>Чистка </h4>
             <h5>все запросы представлены в таблице ниже 👇</h5>
-            <br>
+            <label style="color: dimgrey" th:text="'Примененные фильтры: ' + ${filters}"></label>
             <div class="row">
                 <div class="col" style="padding-left: 5px">
                     <label> </label>
@@ -374,7 +376,7 @@
                         <form class="needs-validation" style="padding: 10px" th:method="post" th:action="@{/forecast}">
                             <div class="row">
                                 <div class="col">
-                                    <button class="w-100 btn btn-lg btn-light" style = "background-color: #ffc24b; border-color:white;color: black; font-size: smaller" type="submit">Прогноз минус-слов</button>
+                                    <button class="w-100 btn btn-lg btn-light" style = "background-color: #ffc24b; border-color:white;color: black; font-size: smaller" type="submit">К прогнозу минус-слов</button>
                                 </div>
                             </div>
                         </form>
@@ -411,42 +413,6 @@
                         }
                     </script>
                 </div>
-            <div th:if="${not #lists.isEmpty(negPhrases)}">
-            <div class="row">
-                    <!--                <div class="col">-->
-                    <div style="max-height: 400px; overflow-x: scroll; width: 1000px">
-                        <table class="table table-striped table-sm table-b table-bordered" style="text-align: left">
-                            <thead style="background-color: #ffc24b; border-color: white; color: black; font-weight: normal; border-bottom: none">
-                            <tr style="font-weight: normal; border-top: none">
-                                <th class="sortable" style="font-weight: normal; border-bottom: none" scope="col">Кампания</th>
-                                <th class="sortable" style="font-weight: normal" scope="col">Группа</th>
-                                <th class="sortable" style="font-weight: normal" scope="col">Запрос</th>
-                                <th class="sortable" style="font-weight: normal" scope="col">Ключ</th>
-                                <th class="sortable" style="font-weight: normal; border-bottom: none" scope="col">Минус-фразы</th>
-                                <th scope="col" style="width: 40px"></th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            <tbody>
-                            <div th:each="negPhrase : ${negPhrases}">
-                                <tr>
-                                    <td th:text="${negPhrase.getSearchQuery.getCampaign()}"></td>
-                                    <td th:text="${negPhrase.getSearchQuery.getAddGroup()}"></td>
-                                    <td th:text="${negPhrase.getSearchQuery.getText()}"></td>
-                                    <td th:text="${negPhrase.getSearchQuery.getKeyword()}"></td>
-                                    <td th:text="${negPhrase.getText()}"></td>
-                                    <td style="padding-right: 10px; padding-left: 10px"><input type="checkbox" name="selectedMetrics" value="${metric.getId()}" /></td>
-                                </tr>
-                            </div>
-                            </tbody>
-                        </table>
-                    </div>
-                    <!--                </div>-->
-                    <!--                <div class="col"></div>-->
-                    <!--                <div class="col"></div>-->
-                    <!--                <div class="col"></div>-->
-                </div>
-            </div>
             </div>
         </div>
     </div>
